--- a/report/text/systemOverviewDesign.tex
+++ b/report/text/systemOverviewDesign.tex
@@ -1,13 +1,13 @@
 \chapter{Overall System Design}
-In this chapter we present the overall design of the Media-Online Management(MOM). First we will present how we intend the users to use the MOM. Then general concepts will be introduced which is an essential part of the system and will be mentioned several times hereafter. Thirdly the requirements of MOM will be explained in more detailed. Finally the system architecture will be presented.    
+In this chapter we present the overall design of Media-Online Management(MOM). First we will present how we intend the users to use MOM. Then general concepts will be introduced which is an essential part of the system and will be mentioned several times hereafter. Thirdly the requirements of MOM will be explained in more detail. Finally the system architecture will be presented.    
 
 
 \section{Media-Online Management} %name our system: temp name: Media-Online Management or MOM
-The Media-Online Management (MOM) is the system that are our solution on the problem statement. To give an overview of the complete system a rich picture \citep{OOAD} have been made, see the figure \ref{fig:systemoverview}. The figure show a home environment with a TV (media), computer and a internet connection, and it show a server. 
+The Media-Online Management (MOM) is the system that is our solution on the problem statement. To give an overview of the complete system a rich picture \citep{OOAD} have been made, see the figure \ref{fig:systemoverview}. The figure shows a home environment with a TV (media), computer and an internet connection, and it shows a server. 
 
-There are two main use pattern. The first is a parent who manage the their MOM using the website from the PC to add, change or delete system settings. This is pictured in the bottom left-side corner in figure \ref{fig:systemoverview}. 
+There are two main use patterns. The first is a parent who manage their MOM using the website from the PC to add, change or delete system settings. This is pictured in the bottom left-side corner in figure \ref{fig:systemoverview}. 
 
-The second use pattern is pictured in the upper left corner of the figure. It is a child user who want to use a media which in this case watch television. But to see television it need power and its power source is blocked by the controller. So the child need to scan his tag and then the controller sends a message to the server which then reply whether the television can be turned on. When the child is done he must scan again such that points can be withdrawn from his user profile. If the child does not have any point he cannot turn on the television nor can he if a rule or permission do not allow it. If a parent wants to watch television without being restricted in any way he can make a rule that gives him unlimited access, but he would still need to scan his tag before and after using the television.
+The second use pattern is pictured in the upper left corner of the figure. It is a child user who wants to use a media which in this case is the television. But to watch television it need power and its power source is blocked by the controller. So the child needs to scan his tag and then the controller sends a message to the server which then reply whether the television can be turned on or not. When the child is done he must scan again such that points can be withdrawn from his user profile. If the child does not have any points he cannot turn on the television nor can he turn it on if a rule or permission does not allow it. If a parent wants to watch television without being restricted in any way he can make a rule that gives him unlimited access, but he would still need to scan his tag before and after using the television. \fixme{Vil vi lave en lille evaluering om vi synes det er fair at forældrene også skal scanne?}
 
 \begin{figure}
 	\centering
@@ -20,16 +20,16 @@ On the server there will be a database, files that generate the website, a web s
 
 \section{General Design Concepts}
 %Go into detail about rules, permission, chores
-In the Media-Online Management there are a few concept that will be used though out the report. These are chore, permission and rules. The meaning of each will be explain in following sections.
+In the Media-Online Management there are a few concepts that will be used through out the report. These are chore, permission and rules. The meaning of each will be explain in following sections.\fixme{Evt. refferance til intro afsnit, alt efter hvor meget det minder om hinanden. Men uanset er det godt med en opsang.}
 
 \subsection{Chore}
-A chore in the MOM is a representation of a house chore that is to be done regally. We have included chore into this system to encourage children to help with the house chore with more time for media as a reward. Therefore each chore need a number of points which will be given when the child has done the house chore. 
+A chore in MOM is a representation of a house chore that is to be done regularly. We have included chore into this system to encourage children to help with the house chores which gives more time for media as a reward. Therefore each chore needs a number of points which will be given when the child has done the house chore. 
 An example on a house chore could be to take out the garbage, then the chore in MOM would have a name: 'take out garbage', possible a bigger description of the chore: 'remember to sort the garbage into the correct trash cans' and when the chore is done some points is given: '10'.  
 
 One disadvantage about the chore design is that the parent needs to use the website to award the child with points for doing a chore. We would have liked to automate it further, but to limit the scope of the project this would be future work.  
 
 \subsection{Permission}
-Permissions in this system is a time period in which the child user is allowed to use a specific media. Permission is included in the MOM to give parents an easy way of controlling in which time period during the day the media can be used by the child. This can help the parents to get the children to bed in time since they cannot use the medias unless the parent allows it. It would especially be useful if the child has medias in his rooms such that the parents do not need to check whether the media is turned on or not. 
+Permissions in this system is a time period in which the child user is allowed to use a specific media. Permission is included in MOM to give parents an easy way of controlling which time periods during the day the media can be used by the child. This can help the parents to get the children to bed in time since they cannot use the medias unless the parent allows it. It would especially be useful if the child has medias in his room such that the parents do not need to check whether the media is turned off or not. 
 
 The permission consist of:
 \begin{itemize}
@@ -46,11 +46,11 @@ The permission consist of:
 		\end{itemize}
 \end{itemize}
 
-An example of a permission is Peter are allowed to use the TV each week day in the time period 17:00 to 19:00. The permission in the system would then have a time 17:00 (FromTime), a time 19:00 (ToTime), the day representation 'Monday, Tuesday, Wednesday, Thursday, Friday', and its repeated weekly.
+An example of a permission is Peter is allowed to use the TV each weekday in the time period 17:00 to 19:00. The permission in the system would then have a time 17:00 (FromTime), a time 19:00 (ToTime), the day representation 'Monday, Tuesday, Wednesday, Thursday, Friday', and it's repeated weekly.\fixme{Måske lidt for meget Database representation med Monday, Tuesdag...}
 
 
 \subsection{Rule}
-In the system a rule can be many things the following is just a few examples of a rule:
+In the system a rule can be many things the following is just a few examples of rules:
 
 \begin{itemize}
 	\item any permission can also be written as a rule
@@ -58,46 +58,44 @@ In the system a rule can be many things the following is just a few examples of 
 	\item Mom and Dad's profiles have unlimited time and unrestricted access to any media
 \end{itemize}
 
-The rule has been included because that gives the user more powerful method to control the use of medias and to control the profiles in the MOM.
-But there are one disadvantage of a rule it might be complicated for the user to understand how to use it and how to construct a rule so the design of how the user can make a rule need to be though through carefully.
+The rule has been included because it gives the parent users more powerful methods to control the use of medias in MOM. %and to control the profiles in the 
+But there is one disadvantage with rules, it might be complicated for the user to understand how to use them. 
+This means we must take care to design the concept of rules, so that it is easy to use and understand their effects.
+%and how to construct a rule so the design of how the user can make a rule need to be though through carefully.
 
-A rule should be connected to one or more user profiles since the rules otherwise would be unnecessary if no one should follow them. A rule consist of a name, a set of conditions and a set of actions. The condition and actions will be explained further in the following sections.
+A rule should be connected to one or more user profiles since the rules otherwise would be unnecessary if no one should follow them. A rule consist of a name, a set of conditions and a set of actions. The conditions and actions will be explained further in the following sections.
 	
 \subsubsection{Condition}
-A condition is used to decide when a rule is relevant which is when all conditions fits. A condition has a predefine name and when the user make a condition he will chose it from a list. The names is listed below together with the additional information that is required. 
+A condition is used to decide when a rule is relevant which is when all conditions fits. A condition has a predefine name and when the user make a condition he will choose it from a list. The names is listed below together with the additional information that is required. 
 
 \begin{description}
-	\item[Timeperiode] when this is chosen the user can define a time period. It need the same information as a permission, a from time, a to time, representation of days where the rule applies, and a representation of when it should be repeated. The time period can be either repeatable or nonrepeatable where the from time and to time is the only data required.
-	\item[Timestamp] the condition has a timestamp as additional information and an action should happen immediately after this timestamp have been reached. 
-	\item[Controller on] this should check whether a given controller for a media is activated. This need a to be connected to a controller.
-	\item[Controller off] this should check whether a given controller for a media is not activate. This need a to be connected to a controller.
+	\item[Timeperiode] when this is chosen the user can define a time period. It needs the same information as a permission, a from time, a to time, representation of days where the rule applies, and a representation of when it should be repeated. The time period can be either repeatable or nonrepeatable where the from time and to time is the only data required.
+	\item[Timestamp] the condition has a timestamp as an additional information and an action should happen immediately after this timestamp have been reached. 
+	\item[Controller on] this should check whether a given controller for a media is active. This needs to be connected to a controller.
+	\item[Controller off] this should check whether a given controller for a media is not active. This needs to be connected to a controller.
 	\item[True] This is always true.
 \end{description}
 
 Later in this chapter there will be some examples of rules which uses conditions.
 
 \subsubsection{Action}
-An action is something that can or should be done if all of the rule's conditions hold. An action always has a name, but as with the condition this name is not user defined. The user have a choice from a list which can be found in the description below with an explanation of what it does and what other information is needed for the action and which conditions it should it can combines with.   
+An action is something that can or should be done if all of the rule's conditions hold. An action always has a name, but as with the condition this name is not user defined. The user have a choice from a list which can be found in the description below with an explanation of what it does and what other information is needed for the action and which conditions it can be combined with.   
 
 \begin{description}
-	\item[Block user] it will block the profiles of all profile connected to the rule. This action can be combined with Timestamp.
-	\item[Activate user] it will activate or re-activate the profiles of all profile connected to the rule. This action can be combined with Timestamp.
-	\item[Add points] it will add points to all profile connected to the rule. Here the number of points is needed.This action can be combined with Timestamp, Timeperiod(Repeateble).
-	\item[Remove points]    This action can be combine with Timestamp, Timeperiod(Repeateble).
-	\item[Set maximum of point] it will set a maximum for the number of points that a profile can have. Here a number representing the maximum points is also needed.This action can be combined with True.
+	\item[Block user] it will block the profiles of all profiles connected to the rule. This action can be combined with Timestamp.
+	\item[Activate user] it will activate or re-activate the profiles of all profiles connected to the rule. This action can be combined with Timestamp.
+	\item[Add points] it will add points to all profiles connected to the rule. Here the number of points is needed. This action can be combined with Timestamp, Timeperiod(Repeateble).
+	\item[Remove points]    This action can be combined with Timestamp, Timeperiod(Repeateble).
+	\item[Set maximum of point] it will set a maximum for the number of points that a profile can have. Here a number representing the maximum points is also needed. This action can be combined with True.
 	\item[Unlimited time] it will give the profile unlimited time to be spend on any media. This action can be combined with True and Timeperiod both repeatable and nonrepeatable.
-	\item[Access any controller] it will give the profile access to any media in the system.This action can be combined with True and Timeperiod both repeatable and nonrepeatable.
+	\item[Access any controller] it will give the profile access to any media in the system. This action can be combined with True and Timeperiod both repeatable and nonrepeatable.
 	\item[Cannot access any controller] it will not give the profile access to any media. This action can be combined with True and Timeperiod both repeatable and nonrepeatable.
 	\item[Access controller] it will give the profile access to a specific media. Here a controller need to be connected to the action. This action can be combined with any of the condition names.
-	\item[Cannot access controller] it will give block the user from using a specific media Here a controller need to be connected to the action.This action can be combined with any of the condition names.
+	\item[Cannot access controller] it will block the user from using a specific media. Here a controller need to be connected to the action. This action can be combined with any of the condition names.
 \end{description}
 		
-Since some of the action like 'Add points' should be done automatically without further contact with the user. Therefore a background process typically called daemon, is also needed in the MOM but this will be explained further in section \ref{subsec:daemon}. 
+Since some of the action like 'Add points' should be done automatically without further contact with the user. A background process typically called daemon, is also needed in MOM but this will be explained further in section \ref{subsec:daemon}. 
 	
-\subsubsection{Rules precedence}
-Rules are allowed overwrite the  
-
-
 \subsubsection{Examples of Rules}
 In this section some examples of rules for a profile will be given.
 
@@ -108,13 +106,13 @@ and an action that is 'Block user' such that she cannot use any media or gain po
 
 If the parents should make a rule which give themselves unlimited time and access to any media. The condition would be True and the actions would be 'Unlimited time' and 'Access any controller'.\\\\
 
-This conclude the general concepts that will be used through out the remaining of the report. Next we will go into further details about the requirements of the MOM.  
+This conclude the general concepts that will be used through out the remainder of the report. Next further details about the requirements of MOM is described.  
 
 
-\section{Requirements of the MOM}
+\section{Requirements of MOM}
 \label{sec:RequirMOM}
 
-In the analysis we came to the conclusion that the following items is necessary for the MOM: 
+In the analysis we came to the conclusion that the following items is necessary for MOM: 
 \begin{itemize}
 	\item A device to toggle the power of an electronic media
 	\item An individual key for each child that can be read by the device
@@ -122,12 +120,12 @@ In the analysis we came to the conclusion that the following items is necessary 
 \end{itemize} 
 
 
-The first item is called controller in this system, the second is the tag and the last is the website on the computer. But also new components of the system is necessary. As explain in the previous section a daemon is needed to check the relevant rules and perform the appropriate actions if the conditions holds. Also during the following sections we find that a web service is need. 
+The first item is called controller in this system, the second is the tag and the last is the website on the computer. But also new components of the system is necessary. As explained in the previous section a daemon is needed to check the relevant rules and perform the appropriate actions if the conditions holds. Also during the following sections we find that a web service is needed. 
 
-In the following sections the specification of the website, controller and tag, web service and daemon will be explained further, before the design and implementation will be presented for each of them in the following chapters.  
+In the following sections the specification of the website, controller and tag, web service and daemon will be explained, before the design and implementation will be presented for each of them in the following chapters.  
 
 \subsection{MOM's Website}
-A Media-Online Management (MOM) owner need a way to manage the system and for this a website will be made. There are several requirements for this website:
+A Media-Online Management (MOM) owner needs a way to manage the system and for this a website will be made. There are several requirements for this website:
 
 \begin{itemize}
 	\item Register a new MOM together with a user profile which is a manager of this system
@@ -136,30 +134,30 @@ A Media-Online Management (MOM) owner need a way to manage the system and for th
 	\item There should be a way to add, edit and delete Tags to the system. Also a tag should be connected to a user profile
 	\item There need to be an option to add, edit and delete rules, permissions and chores from a system
 	\item The user should be able to connect rules and permission with one or more user profiles. The connection should also be able to be removed without removing the rule or permission
-	\item When a chore is made in the real world by a child profile then by connecting this profile to a chore, points should be add to his points
+	\item When a chore is done in the real world by a child profile then by connecting this profile to a chore, points should be added to his profile
 \end{itemize}
 
-There are also some requirements that is nice for the parents to use, but they are not essential for the MOM system:
+There are also some requirements that is nice for the parents to use, but they are not essential for MOM system:
 
 \begin{itemize}
-	\item present the media consumption data as graphs or log such that the parent easy can get an overview of their children's media consumption 
-	\item present data from the MOM in a calendar that shows rule and permission with profiles for whom this is relevant. The calendar should also show when a chore have been done and by who.
+	\item present the media consumption data as graphs or logs such that the parents easy can get an overview of their children's media consumption 
+	\item present data from MOM in a calendar that shows rule and permission with profiles for whom this is relevant. The calendar should also show when a chore have been done and by who.
 \end{itemize}
 
 In chapter \fixme{insert ref} the design and implementation of the website will be presented in more detail. 
  
 
 \subsection{Tag and Controller}
-The tag used in this system is using Radio-frequency Identification (RFID). The tag need to be uniquely identified in the MOM and it must uniquely identify its user. The tag is used in combination with the controller.
+The tag used in this system is using Radio-frequency Identification (RFID). The tag need to be uniquely identified in MOM and it must uniquely identify its user. The tag is used in combination with the controller.
 
-The controller is an Arduino which is connected to a tag reader. Like the tag it need to be uniquely identified in the MOM. The controller must be able to do the following.
+The controller is an Arduino which is connected to a tag reader. Like the tag it need to be uniquely identified in MOM. The controller must be able to do the following.
 
 \begin{itemize}
 	\item Read the data from the tag
 	\item Send and receive messages from the server
 	\item Control the power source of the media 
-	\item Temporary store the tag id that activated this controller
-	\item Keep track of the time spent between the media usage began to it end
+	\item Temporarily store the tag id that activated this controller
+	\item Keep track of the time spent between activation of the media to its end
 \end{itemize}
  
 The design and implementation of the controller will be explained further in chapter \fixme{insert chapter ref}. 
@@ -181,13 +179,13 @@ The web service's design and implementation is explained further in chapter \fix
 
 
 \subsection{Daemon}
-The daemon is used to update data in the database from a rule which the user have made at some point. The daemon has does not have any direct contact to a client. The daemons should handle any rule that is time determined so the condition is either Timestamp or Timeperiod. Then the daemon should do the appropriate action which could be add points to user or block a user.
+The daemon is used to update data in the database from a rule which the user have made at some point. The daemon does not have any direct contact to a client. The daemon should handle any rule that is time determined so the condition is either Timestamp or Timeperiod. Then the daemon should do the appropriate action which could be add points to user or block a user.
 
 The design and implementation of the daemon is presented in detail in chapter \fixme{ref to chapter}. 
  
 \section{System Architecture}
 \label{sec:sysArchitecture}
-Now that all subsystem of the Media-Online Management have been presented the overall system architecture can be explained. The MOM is using the client server architecture which is shown in the figure \ref{fig:serveroverview} \citep{OOAD}. This system has two types of client the first is a controller and the second is a computer where the user manage the system via the web site. The controller is depended on the web service on the server and the computer is depended on the web site. On the server there are the web site, web service and daemon which all are depended on the functions component, MySQLHelper class and data component. In the function component there are several functions to work on the data in the database and this component is depended on MySQLHelper because it should establish the database connection and parse the quires on to the database. 
+Now that all subsystem of the Media-Online Management have been presented the overall system architecture can be explained. MOM is using the client server architecture which is shown in the figure \ref{fig:serveroverview} \citep{OOAD}. This system has two types of client the first is a controller and the second is a computer where the user manages the system via the web site. The controller is depended on the web service on the server and the computer is depended on the web site. On the server there is the web site, web service and daemon which all are depended on the functions component, MySQLHelper class and data component. In the function component there are several functions to work on the data in the database and this component is depended on MySQLHelper because it should establish the database connection and parse the quires on to the database. 
 
 \begin{figure}
 	\centering
