--- a/report/text/precendence.tex
+++ b/report/text/precendence.tex
@@ -24,3 +24,4 @@ When the condition determines the precedence we have different combinations:
 		\end{itemize}
 \end{itemize}
 
+These precedence rules do not avoid all possible conflict but it limit them.  
