--- a/report/text/systemOverviewDesign.tex
+++ b/report/text/systemOverviewDesign.tex
@@ -99,9 +99,9 @@ Since some of the action like 'Add points' should be done automatically without 
 
 \subsection{Permission and Rules Precedence}
 It should be possible to override permissions and rules with another rule, but we need to establish priority among the permission and rules. 
-For the overriding of the two to be relevant it they need to overlap in time which mean that the condition should use Timeperiod or True. Also if it is a rule then it should have an action with the name 'Cannot access controller', 'Access controller', 'Cannot access any controller' or 'Access any controller' to be relevant. 
+For the overriding of the two to be relevant they need to overlap in time which mean that the condition should use Timeperiod or True. Also if it is a rule then it should have an action with the name 'Cannot access controller', 'Access controller', 'Cannot access any controller' or 'Access any controller' to be relevant. 
 
-We came to the conclusion that rules always have precedence over permissions. But if it is two rules it is a more complex precedence rules. First to determine the precedence we look at the action's name. See figure \ref{fig:precendence} where the precedence graph is shown. Notice that the precedence for 'Cannot access controller' and 'Access controller' can be either way depending on the condition. 
+We came to the conclusion that rules always have precedence over permissions. But if it is two rules it is a more complex set of precedence rules. First to determine the precedence we look at the action's name. See figure \ref{fig:precendence} where the precedence graph is shown. Notice that the precedence for 'Cannot access controller' and 'Access controller' can be either way depending on the condition. 
   
 \begin{figure}
 	\centering
@@ -122,7 +122,7 @@ When the condition determines the precedence we have different combinations:
 		\end{itemize}
 \end{itemize}
 
-These precedence rules do not avoid all possible conflict but it limit them.  
+These precedence rules do not avoid all possible conflict but it limits them.  
 	
 \subsubsection{Examples of Rules}
 In this section some examples of rules for a profile will be given.
